# miofive-video-converter

./: .editorconfig  .gitignore  CHANGES.md  DUAL_PLAYER_IMPLEMENTATION.md  DUAL_PLAYER_VISUAL_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MP4_DURATION_EXTRACTION.md  PLAYER_CONTROLS_ANALYSIS.md  README.md  SECURITY_SUMMARY.md  SECURITY_SUMMARY_PLAYER_CONTROLS.md  SOLUTION_SUMMARY.md  THIRD_PARTY_NOTICES.md  generate-test-videos.js  index.js  install-ffmpeg.js  package-lock.json  package.json  playwright.config.js
.github/: FUNDING.yml
.github/agents/: my-agent.agent.md
.github/workflows/: deploy-demo.yml  node.js.yml
public/: app.js  demo-api-mock.js  folder-browser.js  index.html  manifest.webmanifest  player-styles.css  player.html  player.js  service-worker.js  styles.css  test-verification.html
scripts/: build-ffmpeg-macos-arm64.sh  build-sidecar.js  check-open-source-licenses.js  copy-ffmpeg-binaries.js  copy-resources.js
sidecar/: server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test-data/: README.md
tests/: README.md  api.spec.js  app.spec.js  demo-api-mock.spec.js  demo-mode.spec.js  export-folder-browser.spec.js  export.spec.js  file-range-improvements.spec.js  folder-browser.spec.js  player-abort-error-fix.spec.js  player-blink-fix.spec.js  player-state.spec.js  player.spec.js  player.spec.js.backup  scan.spec.js  screenshot.spec.js
